// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`Button\` renders 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: background has value #ff0000 1`] = `
.c0 {
  box-sizing: border-box;
  background-color: #ff0000;
  cursor: pointer;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  background-color: #ff0000;
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: border has value solid 1px 1`] = `
.c0 {
  box-sizing: border-box;
  border: solid 1px;
  cursor: pointer;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: borderRadius has value 1px 1`] = `
.c0 {
  box-sizing: border-box;
  border-radius: 1px;
  cursor: pointer;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: padding has value 10px 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  padding: 10px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Button\` styles Prop: padding has value 10px 20px 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
  padding: 10px 20px;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: color has value #ff0000 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: #ff0000;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
    color="#ff0000"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: color has value #ff0000 2`] = `
<span
  class="sc-bwzfXH jEThsa"
  color="#ff0000"
>
  Test text
</span>
`;

exports[`\`Typography\` styles Prop: size has value 14px 1`] = `
.c0 {
  box-sizing: border-box;
  cursor: pointer;
}

.c2 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

.c1 {
  cursor: pointer;
}

<button
  class="c0 c1"
  cursor="pointer"
>
  <span
    class="c2"
  >
    Test text
  </span>
</button>
`;

exports[`\`Typography\` styles Prop: size has value 14px 2`] = `
<span
  class="sc-bwzfXH eXSLtH"
>
  Test text
</span>
`;
